--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: azure;
+    background-color: purple;
     font-family: 'Roboto Mono' sans-serif;
     display: flex;
     align-items: center;
@@ -16,7 +16,7 @@ body {
 }
 
 .quiz-container{
-    background-color: whitesmoke;
+    background-color: white; 
     border-radius: 10px;
     box-shadow: 0 0 10px 2px black;
     width: 500px;
@@ -41,6 +41,11 @@ ul li {
 
 ul li label  {
     cursor: pointer;
+}
+
+.progress {
+    align-items: center;
+    justify-content: center;
 }
 
 button{
