--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 
 body {
     background-color: purple;
-    font-family: 'Roboto Mono' sans-serif;
+    font-family: 'Roboto+Mono', sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -43,10 +43,6 @@ ul li label  {
     cursor: pointer;
 }
 
-.progress {
-    align-items: center;
-    justify-content: center;
-}
 
 button{
     background-color:greenyellow;
