--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,24 @@
     box-sizing: border-box;
 }
 
+li {
+    font-size: smaller;
+}
+
+
+.div_a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    border: 2px solid black;
+    margin-top: 10px;
+    padding: 0px 10px;
+
+
+}
+
+
 body {
     background-color: purple;
     font-family: 'Roboto+Mono', sans-serif;
@@ -21,7 +39,10 @@ body {
     box-shadow: 0 0 10px 2px black;
     width: 500px;
     overflow: hidden;
+    display: none;
+ 
 }
+
 
 .quiz-top {
     padding: 2rem;
