--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,42 +14,37 @@ body {
     overflow: hidden;
     margin: 0;
 }
-.modal {
-    display: none; 
-    position: fixed; 
-    z-index: 1; 
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%; 
-    overflow: auto; 
-    background-color: rgba(0,0,0,0.4); 
-  }
   
-  .modal-content {
-    background-color: #fefefe;
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left:0;
+    top:0;
+    width: 100%;
+    overflow: auto;
+    background-color: azure;
+}
+
+.modal-content {
+    background-color: whitesmoke;
     margin: 15% auto;
     padding: 20px;
-    border: 1px solid #888;
+    border: 1px solid grey;
     width: 80%;
-  }
-  
-  .close {
-    color: #aaa;
-    float: right;
+}
+
+.close {
+    color: grey;
+    float: left;
     font-size: 28px;
     font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
+}
+
+.close:hover, .close:focus {
     color: black;
     text-decoration: none;
-    cursor: pointer;
-  }
-  
-
-
+}
 
 .quiz-container{
     background-color: white; 
